<resources>
    <string name="app_name">Plant Finder</string>

    <string name="logout">Logout</string>
    <string name="editAccount">Edit Account</string>
    <string name="createAccount">Create Account</string>
    <string name="Search">Search</string>

    <string name="enter_username">Enter your username here</string>
    <string name="enter_password">Enter your password here</string>
    <string name="login">Login</string>

    <string name="profile">Profile</string>
    <string name="profileBio">Add something to your bio!</string>
    <string name="editProfile">Edit Profile</string>

    <string name="welcomeAdmin">Welcome Admin!</string>
    <string name="addPlants">Add Plants</string>
    <string name="changeUsers">Edit user accounts</string>
    <string name="what">What would you like to do?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_account_fragment">Hello account fragment</string>

    <string name="bioHint">Start typing here</string>
    <string name="saveButton">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="addUsers">Add user</string>
    <string name="editUser">Edit user</string>
    <string name="newUsernameHint">Enter the new username here</string>
    <string name="newPasswordHint">Enter the new password here</string>

    <string name="lists">Lists</string>
    <string name="posts">Posts</string>
    <string name="deleteAcc">Delete Account</string>

    <string name="adminButton">Admin</string>

    <string name="PlantName">Plant Name</string>
    <string name="PlantLatinName">Plant Latin Name</string>
    <string name="PlantDifficulty">Plant Difficulty</string>
    <string name="LightAmount">Light Amount</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <string name="newPost">New Post</string>
    <string name="selectImage">Select An Image</string>
    <string name="caption">Caption</string>
    <string name="goBack">Go Back</string>


</resources>