<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="268dp"
        android:layout_height="46dp"
        android:text="@string/welcomeAdmin"
        android:textAlignment="center"
        android:textColor="@color/lightGreen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/inventory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/addPlants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeUsers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_button"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/textView500"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/what"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>