<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_enterUsername"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:hint="@string/newUsernameHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"/>

    <EditText
        android:id="@+id/editText_enterPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:hint="@string/newPasswordHint"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enterUsername"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_new_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addUsers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enterPassword"
        app:layout_constraintVertical_bias="0.21" />

</androidx.constraintlayout.widget.ConstraintLayout>